# elliptic-v0

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
frontend/src/: actions.jsx  index.html
frontend/src/components/: footer.jsx  info_bar.jsx  landing.tsx  liquidity.tsx  login.tsx  navbar.jsx  social_network.jsx  status.jsx  swap.tsx
frontend/src/components/vaults/: NewVault.tsx  VaultMenu.tsx
protocol/: dashboard.rs  lib.rs  main.rs  numeric.rs  state.rs
protocol/tests/: tests.rs
