[package]
name = "protocol-canister"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "protocol-canister"
path = "protocol/main.rs"

[lib]
path = "protocol/lib.rs"

[features]
self_check = []

[dependencies]
candid = "0.9.5"
ciborium = "0.2.1"
ic0 = "0.18.9"
ic-canister-log = { git = "https://github.com/dfinity/ic/", rev = "423f17976070f91353a817ee234b68284094b6e0" }
ic-canisters-http-types = { git = "https://github.com/dfinity/ic/", rev = "423f17976070f91353a817ee234b68284094b6e0" }
ic-cdk = "0.10.0"
ic-cdk-timers = "0.4.0"
ic-cdk-macros = "0.7.0"
ic-icrc1-client-cdk = { git = "https://github.com/dfinity/ic/", rev = "423f17976070f91353a817ee234b68284094b6e0" }
ic-metrics-encoder = "1"
ic-xrc-types = "1.0.0"
ic-stable-structures = "0.5.6"
icrc-ledger-types = { git = "https://github.com/dfinity/ic/", rev = "423f17976070f91353a817ee234b68284094b6e0" }
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32"
serde = "1.0.171"
serde_bytes = "0.11"
serde_json = "1.0.96"

[dev-dependencies]
assert_matches = "1.3.0"
protocol-canister = { path = "./" }
ic-base-types = { git = "https://github.com/dfinity/ic/", rev = "423f17976070f91353a817ee234b68284094b6e0" }
ic-state-machine-tests = { git = "https://github.com/dfinity/ic/", rev = "423f17976070f91353a817ee234b68284094b6e0" }
ic-ledger-canister-core = { git = "https://github.com/dfinity/ic/", rev = "423f17976070f91353a817ee234b68284094b6e0" }
ic-ic00-types = { git = "https://github.com/dfinity/ic/", rev = "423f17976070f91353a817ee234b68284094b6e0" }
ic-icrc1-ledger = { git = "https://github.com/dfinity/ic/", rev = "423f17976070f91353a817ee234b68284094b6e0" }
lazy_static = "1.4.0"
xrc-mock = { git = "https://github.com/dfinity/ic/", rev = "423f17976070f91353a817ee234b68284094b6e0" }
rand = "0.8.5"
proptest = "1.0"
